2009-10-12  Jakub Wieczorek  <faw217@gmail.com>

Reviewed by Simon Hausmann.

        [Qt] Missing default value for the default text encoding.
        https://bugs.webkit.org/show_bug.cgi?id=30311

        QtWebKit has provided a default, hardcoded value for default charset but since
        the addition of the defaultTextEncoding setting in QWebSettings, that hardcoded
        value has had no effect.

        Added a regression test and unskipped fast/dom/Document/document-charset.html,
        which is passing now.

        * platform/qt/Skipped:
2009-10-12  Jakub Wieczorek  <faw217@gmail.com>

        Reviewed by Simon Hausmann.

        [Qt] Missing default value for the default text encoding.
        https://bugs.webkit.org/show_bug.cgi?id=30311

        QtWebKit has provided a default, hardcoded value for default charset but since
        the addition of the defaultTextEncoding setting in QWebSettings, that hardcoded
        value has had no effect.

        Added a regression test and unskipped fast/dom/Document/document-charset.html,
        which is passing now.

        * Api/qwebpage.cpp:
        (QWebPagePrivate::QWebPagePrivate):
        * Api/qwebsettings.cpp:
        (QWebSettings::QWebSettings):
        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::defaultTextEncoding):

Canonical link: https://commits.webkit.org/40985@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49492 268f45cc-cd09-0410-ab3c-d52691b4dbfc